Made Kasper's proposal for team profiles the default

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2011-10-02 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Made Kasper's proposal for team profiles the default.
+
 	* Level-chaining now works (along with exp gain).
 
 2011-10-01 : Christian Mauduit <ufoot@ufoot.org>
