--- a/liquidwar6/doc/liquidwar6.texi
+++ b/liquidwar6/doc/liquidwar6.texi
@@ -362,6 +362,8 @@ a build is done with a different source.
 2010-08-23 : @uref{http://download.savannah.gnu.org/releases/liquidwar6/0.0.9beta/,0.0.9beta}, codename ``Chuck'', stamp 2096
 @item
 2011-07-29 : @uref{http://download.savannah.gnu.org/releases/liquidwar6/0.0.10beta/,0.0.10beta}, codename ``Gengis Kahn'', stamp 2562
+@item
+2011-10-02 : @uref{http://download.savannah.gnu.org/releases/liquidwar6/0.0.11beta/,0.0.11beta}, codename ``Ho Chi Minh'', stamp 2784
 @end itemize
 
 @subsection Road map
