--- a/liquidwar6/doc/map-rules-selfdoc.texi
+++ b/liquidwar6/doc/map-rules-selfdoc.texi
@@ -1532,7 +1532,7 @@ about weapons to know what these ids mean.
 @deffnx {XML key} @code{team-profile-orange-weapon-id}
 Type: integer
 
-Default value: LW6MAP_WEAPON_BEZERK
+Default value: LW6MAP_WEAPON_BERZERK
 Min value: 0
 Max value: 19
 
@@ -2081,18 +2081,18 @@ How long all weapons (for which duration makes sense) will last. Unit is
 seconds.
 @end deffn
 
-@subsection weapon-tune-bezerk-power
-@deffn {Command-line option} @code{--weapon-tune-bezerk-power=<value>}
-@deffnx {Environment variable} @code{LW6_WEAPON_TUNE_BEZERK_POWER}
-@deffnx {XML key} @code{weapon-tune-bezerk-power}
+@subsection weapon-tune-berzerk-power
+@deffn {Command-line option} @code{--weapon-tune-berzerk-power=<value>}
+@deffnx {Environment variable} @code{LW6_WEAPON_TUNE_BERZERK_POWER}
+@deffnx {XML key} @code{weapon-tune-berzerk-power}
 Type: integer
 
 Default value: 3
 Min value: 1
 Max value: 100
 
-Use to specifiy how strong bezerk mode is, if set to 3, then attacks will be 3
-times as efficient in bezerk mode.
+Use to specifiy how strong berzerk mode is, if set to 3, then attacks will be
+3 times as efficient in berzerk mode.
 @end deffn
 
 @subsection weapon-tune-turbo-power
