--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-10-07 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed map resampling, texture and fighters correctly aligned.
+
 2011-10-02 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Released 0.0.11beta.
