--- a/liquidwar6/doc/dat-gdoc.texi
+++ b/liquidwar6/doc/dat-gdoc.texi
@@ -37,3 +37,29 @@ Tells how many nodes are registered in the object.
 @strong{Return value:}  integer, number of nodes
 @end deftypefun
 
+@deftypefun {int} {lw6dat_warehouse_put_atom_str} (lw6dat_warehouse_t * @var{warehouse}, u_int64_t @var{logical_from}, char * @var{atom_str_serial_i_n_msg})
+@var{warehouse}:  warehouse object to use
+
+@var{logical_from}:  from who the message came from originally
+
+@var{atom_str_serial_i_n_msg}:  message of the form serial i n msg
+
+Puts an atomic string in the object, this kind of string is
+typically received on the network.
+
+@strong{Return value:}  1 on success, 0 on error
+@end deftypefun
+
+@deftypefun {int} {lw6dat_warehouse_put_msg} (lw6dat_warehouse_t * @var{warehouse}, u_int64_t @var{logical_from}, char * @var{msg})
+@var{warehouse}:  warehouse object to use
+
+@var{logical_from}:  from who the message came from originally
+
+@var{msg}:  message
+
+Puts a message in the object. The message will be splitted into
+several atoms if needed, it can be arbitrary long.
+
+@strong{Return value:}  1 on success, 0 on error
+@end deftypefun
+
