--- a/liquidwar6/doc/msg-gdoc.texi
+++ b/liquidwar6/doc/msg-gdoc.texi
@@ -437,6 +437,19 @@ Analyses a message, gets the first word and interpret it as an int.
 @strong{Return value:}  1 on success, 0 on failure.
 @end deftypefun
 
+@deftypefun {int} {lw6msg_word_first_int_ge0} (int * @var{parsed_value}, char ** @var{next}, char * @var{msg})
+@var{parsed_value}:  will contain the parsed value
+
+@var{next}:  if NOT NULL, will contain a (non freeable) pointer on remaining message
+
+@var{msg}:  the message to parse
+
+Analyses a message, gets the first word and interpret it as an int.
+The value must be strictly greater than 0.
+
+@strong{Return value:}  1 on success, 0 on failure.
+@end deftypefun
+
 @deftypefun {int} {lw6msg_word_first_int_gt0} (int * @var{parsed_value}, char ** @var{next}, char * @var{msg})
 @var{parsed_value}:  will contain the parsed value
 
