--- a/liquidwar6/doc/dat-gdoc.texi
+++ b/liquidwar6/doc/dat-gdoc.texi
@@ -37,6 +37,22 @@ Tells how many nodes are registered in the object.
 @strong{Return value:}  integer, number of nodes
 @end deftypefun
 
+@deftypefun {u_int64_t} {lw6dat_warehouse_get_local_id} (lw6dat_warehouse_t * @var{warehouse})
+@var{warehouse}:  the warehouse object to query.
+
+Returns the local id.
+
+@strong{Return value:}  64-bit id.
+@end deftypefun
+
+@deftypefun {int} {lw6dat_warehouse_get_local_serial} (lw6dat_warehouse_t * @var{warehouse})
+@var{warehouse}:  the warehouse object to query.
+
+Returns the latest (highest) serial number given for local node.
+
+@strong{Return value:}  integer, latest serial number
+@end deftypefun
+
 @deftypefun {int} {lw6dat_warehouse_put_atom_str} (lw6dat_warehouse_t * @var{warehouse}, u_int64_t @var{logical_from}, char * @var{atom_str_serial_i_n_msg})
 @var{warehouse}:  warehouse object to use
 
@@ -50,10 +66,8 @@ typically received on the network.
 @strong{Return value:}  1 on success, 0 on error
 @end deftypefun
 
-@deftypefun {int} {lw6dat_warehouse_put_msg} (lw6dat_warehouse_t * @var{warehouse}, u_int64_t @var{logical_from}, char * @var{msg})
+@deftypefun {int} {lw6dat_warehouse_put_msg} (lw6dat_warehouse_t * @var{warehouse}, char * @var{msg})
 @var{warehouse}:  warehouse object to use
-
-@var{logical_from}:  from who the message came from originally
 
 @var{msg}:  message
 
