--- a/liquidwar6-extra-maps/debian/changelog
+++ b/liquidwar6-extra-maps/debian/changelog
@@ -1,3 +1,9 @@
+liquidwar6-extra-maps (0.0.12beta-1vendor) unstable; urgency=low
+
+  * Updated for 0.0.12beta.
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Sun, 09 Oct 2011 21:30:00 +0100
+
 liquidwar6-extra-maps (0.0.11beta-1vendor) unstable; urgency=low
 
   * New release 0.0.11beta.
