--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-10-13 : Christian Mauduit <ufoot@ufoot.org>
+
+	* SIGSEGV and SIGFPS now trapped.
+
 2011-10-11 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Hacking dat module, changed function prototypes.
