--- a/liquidwar6/doc/sys-gdoc.texi
+++ b/liquidwar6/doc/sys-gdoc.texi
@@ -491,9 +491,17 @@ Returns the license for the program (GNU GPL v3 or later).
 Must not be freed.
 @end deftypefun
 
-@deftypefun {char *} {lw6sys_build_get_url} ()
+@deftypefun {char *} {lw6sys_build_get_home_url} ()
 
 Returns the URL of the game, its homepage.
+
+@strong{Return value:}  a non-NULL string, single line whithout '\n' at the end. 
+Must not be freed.
+@end deftypefun
+
+@deftypefun {char *} {lw6sys_build_get_bugs_url} ()
+
+Returns the URL for bugs, the bug reports page.
 
 @strong{Return value:}  a non-NULL string, single line whithout '\n' at the end. 
 Must not be freed.
@@ -3472,6 +3480,22 @@ set a flag used later by @code{lw6sys_signal_poll_quit}.
 The own HUP signal handler, will basically do
 something that shows the program is alive, typically
 display a NOTICE message.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6sys_signal_segv_handler} (int @var{signum})
+@var{signum}:  SIGTERM
+
+The own SEGV signal handler, will display a backtrace and exit.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6sys_signal_fpe_handler} (int @var{signum})
+@var{signum}:  SIGTERM
+
+The own FPE signal handler, will display a backtrace and exit.
 
 @strong{Return value:}  none.
 @end deftypefun
